Fix broken styles

--- a/styles.css
+++ b/styles.css
@@ -5,46 +5,102 @@
   padding: 0;
 }
 
+
 body {
-  background-color: black;
+  background: url("./assets/background.png") no-repeat center center fixed;
+}
+
+main {
 }
 
 /* TYPE */
 h1 {
-  margin: 25px;
+  margin-top: 35px;
   color: white;
-  font-family: 'MedievalSharp', cursive;
-  font-size: 3.5em;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 300;
+  font-size: 3em;
   text-align: center;
 }
 
 h2 {
   color: white;
-  font-family: 'MedievalSharp', cursive;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 300;
   font-size: 2em;
+  text-align: center;
+  margin: 10px 0 10px 0;
 }
 
 h3 {
   color: white;
-  font-family: 'Potta One', cursive;
-  font-size: 1.5em;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 1em;
+  text-align: center;
+  margin: 10px 0 10px 0;
 }
 
 /* PLAY AREA */
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 120px 0;
+}
 
+.p1-area {
+  width: 260px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:space-around;
+  border: dashed 2px #B17689;
+  border-radius: 5px;
+}
+
+.p2-area {
+  width: 260px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:space-around;
+  border: dashed 2px #9DF8FD;
+  border-radius: 5px;
+}
 
 /* CARDS */
 img {
-  width: 200px;
-  height: 280px;
+  width: 190px;
+  height: 266px;
   border-radius: 5px;
   object-fit: cover;
-
 }
 
-/*font-family: 'MedievalSharp', cursive;
-font-family: 'Potta One', cursive;  */
+button {
+  width: 150px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 1em;
+  text-align: center;
+  margin-left: 30px;
+  margin-top: 30px;
+}
 
+/* UTILITY */
+.hidden {
+  opacity: 0;
+}
+
+
+
+/*
+font-family: 'Orbitron', sans-serif;    400 500
+font-family: 'Roboto Mono', monospace;   300 italic
+*/
 /* RULE ORDER
 Size
 Display
@@ -56,5 +112,4 @@ Padding
 Font
 Text
 Other
-
  */
